--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
                         <input type="text" name="title" id="title" class="w-full rounded-md border-yellow-500 border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2">
                     </section>
                     <section class="mb-2">
-                        <label class="block pr-5 mb-2 text-xl" for="description">Description</label>
+                        <label class="block pr-5 mb-2 text-xl" for="description">Beskrivning</label>
                         <p class="message text-sm text-red-700 mb-2 hidden"> Error message</p>
                         <textarea maxlength="500" rows="5"  name="description" id="description" class="resize-none w-full rounded-md border-yellow-500 border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2"> </textarea>
                     </section>
@@ -41,5 +41,6 @@
             </section>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
