--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
                     <section class="mb-2">
                         <label class="block pr-5 mb-2 text-xl" for="title">Utfört senast</label>
                         <p class="message text-sm text-red-700 mb-2 hidden"> Error message</p>
-                        <input type="date" name="dueDate" id="duoDate" class="w-full rounded-md border-yellow-500 border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2">
+                        <input type="date" name="dueDate" id="dueDate" class="w-full rounded-md border-yellow-500 border-2 focus-within:outline-none focus:border-yellow-600 px-4 py-2">
                     </section>
                     <button name="submitTodoForm" class="rounded-md bg-yellow-500 hover:bg-yellow-400 px-4 py-1" type="submitt">Spara</button>
                 </form>
@@ -46,3 +46,4 @@
 
 </body>
 </html>
+
