Klar mer arbetet

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <main id="root" class="pt-24 bg-gradient-to-br from-purple-500 to-yellow-400 min-h-screen">
-        <h1 class="text-center mb-10 text-7xl text-purple-900">Todo-lista</h1>
+        <h1 class="text-center mb-10 text-7xl text-purple-900">Att göra lista</h1>
         <section class="flex gap-10 w-full xl:w-4/5 mx-2 xl:mx-auto bg-white bg-opacity-75 p-5 rounded-lg">
             <section class="flex-1 ">
                 <h2 class="mb-6 text-3xl text-orange-900">Lägg till en uppgift</h2>
